started discussion, temporal models still stupid

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -1180,3 +1180,164 @@ outbreak in Germany},
   publisher={Elsevier}
 }
 
+@book{blangiardo2015spatial,
+  title={Spatial and spatio-temporal Bayesian models with R-INLA},
+  author={Blangiardo, Marta and Cameletti, Michela},
+  year={2015},
+  publisher={John Wiley \& Sons}
+}
+
+@article{sigler2020socio,
+  title={The Socio-Spatial Determinants of COVID-19 Diffusion: The Impact of Globalisation, Settlement Characteristics and Population},
+  author={Sigler, Thomas and Mahmuda, Sirat and Kimpton, Anthony and Loginova, Julia and Wohland-Jakhar, Pia and Charles-Edwards, Elin and Corcoran, Jonathan},
+  year={2020}
+}
+
+@article{jamshidi2020global,
+  title={Global to USA County Scale Analysis of Weather, Urban Density, Mobility, Homestay, and Mask Use on COVID-19},
+  author={Jamshidi, Sajad and Baniasad, Maryam and Niyogi, Dev},
+  journal={International journal of environmental research and public health},
+  volume={17},
+  number={21},
+  pages={7847},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{whittle2020ecological,
+  title={An ecological study of socioeconomic predictors in detection of COVID-19 cases across neighborhoods in New York City},
+  author={Whittle, Richard S and Diaz-Artiles, Ana},
+  journal={BMC medicine},
+  volume={18},
+  number={1},
+  pages={1--17},
+  year={2020},
+  publisher={BioMed Central}
+}
+
+@article{elkeles1996immigrants,
+  title={Immigrants and health: unemployment and health-risks of labour migrants in the Federal Republic of Germany, 1984--1992},
+  author={Elkeles, Thomas and Seifert, Wolfgang},
+  journal={Social science \& medicine},
+  volume={43},
+  number={7},
+  pages={1035--1047},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{sia2019chronic,
+  title={Chronic disease and malnutrition biomarkers among unemployed immigrants and Canadian born adults},
+  author={Sia, Drissa and Miszkurka, Malgorzata and Batal, Malek and Delisle, H{\'e}l{\`e}ne and Zunzunegui, Maria Victoria},
+  journal={Archives of Public Health},
+  volume={77},
+  number={1},
+  pages={1--10},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{gaskin2021geographic,
+  title={Geographic disparities in COVID-19 infections and deaths: The role of transportation},
+  author={Gaskin, Darrell J and Zare, Hossein and Delarmente, Benjo A},
+  journal={Transport policy},
+  volume={102},
+  pages={35--46},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{daon2020estimating,
+  title={Estimating COVID-19 outbreak risk through air travel},
+  author={Daon, Yair and Thompson, Robin N and Obolski, Uri},
+  journal={Journal of travel medicine},
+  volume={27},
+  number={5},
+  pages={taaa093},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{mukherjee2021covid,
+  title={Is COVID-19 Gender-sensitive?},
+  author={Mukherjee, Shreya and Pahan, Kalipada},
+  journal={Journal of Neuroimmune Pharmacology},
+  pages={1--10},
+  year={2021},
+  publisher={Springer}
+}
+
+
+@article{gausman2020sex,
+  title={Sex and gender disparities in the COVID-19 pandemic},
+  author={Gausman, Jewel and Langer, Ana},
+  journal={Journal of women's health},
+  volume={29},
+  number={4},
+  pages={465--466},
+  year={2020},
+  publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~…}
+}
+
+@misc{spagnolo2020sex,
+  title={Sex and gender differences in health: what the COVID-19 pandemic can teach us},
+  author={Spagnolo, Primavera A and Manson, JoAnn E and Joffe, Hadine},
+  year={2020},
+  publisher={American College of Physicians}
+}
+
+@article{kopel2020racial,
+  title={Racial and gender-based differences in COVID-19},
+  author={Kopel, Jonathan and Perisetti, Abhilash and Roghani, Ali and Aziz, Muhammad and Gajendran, Mahesh and Goyal, Hemant},
+  journal={Frontiers in public health},
+  volume={8},
+  pages={418},
+  year={2020},
+  publisher={Frontiers}
+}
+
+@article{vieten2020new,
+  title={The “New Normal” and “Pandemic Populism”: The COVID-19 Crisis and Anti-Hygienic Mobilisation of the Far-Right},
+  author={Vieten, Ulrike M},
+  journal={Social Sciences},
+  volume={9},
+  number={9},
+  pages={165},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{eberl2020populism,
+  title={From Populism to the ‘Plandemic’: Why populists believe in COVID-19 conspiracies},
+  author={Eberl, Jakob-Moritz and Huber, Robert A and Greussing, Esther},
+  year={2020},
+  publisher={SocArXiv}
+}
+
+@article{cordes2020spatial,
+  title={Spatial analysis of COVID-19 clusters and contextual factors in New York City},
+  author={Cordes, Jack and Castro, Marcia C},
+  journal={Spatial and Spatio-temporal Epidemiology},
+  volume={34},
+  pages={100355},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{coven2020disparities,
+  title={Disparities in mobility responses to covid-19},
+  author={Coven, Joshua and Gupta, Arpit},
+  journal={New York University},
+  year={2020}
+}
+
+@article{baena2020impact,
+  title={Impact of COVID-19 outbreak by income: hitting hardest the most deprived},
+  author={Baena-D{\'\i}ez, Jose Miguel and Barroso, Mar{\'\i}a and Cordeiro-Coelho, Sara Isabel and D{\'\i}az, Jorge L and Grau, Mar{\'\i}a},
+  journal={Journal of Public Health},
+  volume={42},
+  number={4},
+  pages={698--703},
+  year={2020},
+  publisher={Oxford University Press}
+}
