--- a/tex_files/chapter-datacollection.tex
+++ b/tex_files/chapter-datacollection.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../my-thesis.tex
 %
 \chapter{Dataset Collection}
-As is often the case with statisticians, the construction of the dataset used to analyse a research question is an essential task and frequently involves the merging of multiple data sources to create a dataset. This was the case in this thesis and in the following chapter a brief overview of the data sources used, their pre-processing and how they were combined is given.
+As is often the case with statisticians, the construction of the dataset used to analyse a research question is an essential task and frequently involves the merging of multiple data sources to create a dataset. This was the case in this thesis and in the following chapter a brief overview of the data sources used, their pre-processing and how they were combined is given. All of the data that is used in this work is openly available, either through government sources or Github.
 \label{sec:datacollection}
 \clearpage
 \section{Covid-19 Data}
