--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -116,9 +116,9 @@
 \input{chapter-geodata}
 \input{chapter-datacollection}
 \input{chapter-analysis}
+\input{chapter-discussion}
+\input{chapter-conclusion}
 \input{chapter-appendix}
-%\input{chapter-discussion}
-
 
 {%
 \setstretch{1.1}
