--- a/tex_files/chapter-appendix.tex
+++ b/tex_files/chapter-appendix.tex
@@ -89,7 +89,7 @@ The first two moments of the distribution are given by
     \hbox{Var}\left[X\right] &= \frac{pr}{\left(1-p\right)^2}.
 \end{align} 
 For large values of $r$, the negative binomial distribution can be approximated by a normal distribution
-\cite{haldane1941fitting}.
+\autocite[][]{haldane1941fitting}.
 \clearpage
 \clearpage
 \section{Moments}
